--- a/TestData/environment.yaml
+++ b/TestData/environment.yaml
@@ -1,2 +1,4 @@
 URL_IPST: http://202.139.199.68:3000/ 
 URL_STRAPI: http://202.139.199.68:1337/admin/auth/login
+LOGIN_EMAIL: teacher@gmail.com
+LOGIN_PASSWORD: 123456
