Test Cases For Login IPST

--- a/TestData/environment.yaml
+++ b/TestData/environment.yaml
@@ -1,4 +1,12 @@
 URL_IPST: http://202.139.199.68:3000/ 
 URL_STRAPI: http://202.139.199.68:1337/admin/auth/login
-LOGIN_EMAIL: teacher@gmail.com
-LOGIN_PASSWORD: 123456
+
+LOGIN_EMAIL_TEACHER: teacher@gmail.com
+LOGIN_PASSWORD_TEACHER: 123456
+LOGIN_EMAIL_STUDENT: studentest@gmail.com
+LOGIN_PASSWORD_STUDENT: 123456
+LOGIN_EMAIL_PARENT: parenttest@gmail.com
+LOGIN_PASSWORD_PARENT: 123456
+
+LOGIN_EMAIL_STRAPI: charinpat.p@gmail.com
+LOGIN_PASSWORD_STRAPI: Charinpat321
