--- a/TestData/environment.yaml
+++ b/TestData/environment.yaml
@@ -1,6 +1,13 @@
 URL_IPST: http://202.139.199.68:3000/ 
 URL_STRAPI: http://202.139.199.68:1337/admin/auth/login
 
+URL_VDO:  http://202.139.199.68:3000/medias/M1-P1-%E0%B8%A5%E0%B8%B1%E0%B8%81%E0%B8%A9%E0%B8%93%E0%B8%B0%E0%B8%97%E0%B8%B1%E0%B9%88%E0%B8%A7%E0%B9%84%E0%B8%9B%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%A5%E0%B8%B1%E0%B8%81%E0%B8%A9%E0%B8%93%E0%B8%B0%E0%B9%80%E0%B8%89%E0%B8%9E%E0%B8%B2%E0%B8%B0.
+URL_PPT:  http://202.139.199.68:3000/medias/M1-Act2-PPT-%E0%B9%81%E0%B8%99%E0%B8%A7%E0%B8%84%E0%B8%B4%E0%B8%94%E0%B9%80%E0%B8%8A%E0%B8%B4%E0%B8%87%E0%B8%99%E0%B8%B2%E0%B8%A1%E0%B8%98%E0%B8%A3%E0%B8%A3%E0%B8%A1
+URL_WORD: http://202.139.199.68:3000/medias/M1-ACT-%E0%B8%84%E0%B8%B3%E0%B8%8A%E0%B8%B5%E0%B9%89%E0%B9%81%E0%B8%88%E0%B8%87
+URL_PDF:  http://202.139.199.68:3000/medias/M1-Act2-Pdf-%E0%B9%81%E0%B8%9C%E0%B8%99%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B9%80%E0%B8%AA%E0%B9%89%E0%B8%99%E0%B8%97%E0%B8%B2%E0%B8%87%E0%B9%80%E0%B8%94%E0%B8%B4%E0%B8%99%E0%B8%A3%E0%B8%96
+URL_EXERCISE: http://202.139.199.68:3000/medias/m4b1_03_part1force_and_laws_of_motion_028_exercise
+URL_OTHER:  http://202.139.199.68:3000/medias/M1-Act3-Xls-%E0%B9%82%E0%B8%9B%E0%B8%A3%E0%B9%81%E0%B8%81%E0%B8%A3%E0%B8%A1%E0%B9%80%E0%B8%A3%E0%B8%B5%E0%B8%A2%E0%B8%87%E0%B8%9C%E0%B8%B1%E0%B8%87%E0%B8%87%E0%B8%B2%E0%B8%99_2
+
 LOGIN_EMAIL_TEACHER: teacher@gmail.com
 LOGIN_PASSWORD_TEACHER: 123456
 LOGIN_EMAIL_STUDENT: studentest@gmail.com
@@ -14,3 +21,11 @@ LOGIN_EMAIL_STRAPI: charinpat.p@gmail.com
 LOGIN_PASSWORD_STRAPI: Charinpat321
 WRONG_EMAIL_STRAPI: wrong_strapi@gmail.com
 WRONG_PASSWORD_STRAPI: WrongStrapi321
+
+VDO_NAME: ลักษณะทั่วไปและลักษณะเฉพาะ. 
+PPT_NAME: กิจกรรมที่ 2 แนวคิดเชิงนามธรรม (PPT)
+WORD_NAME:  คำชี้แจง
+PDF_NAME: กิจกรรมที่ 2 แผนที่เส้นทางเดินรถ
+EXERCISE_NAME:  แบบฝึกหัดท้ายบทที่-3-แรงและกฎการเคลื่อนที่
+OTHER_NAME: โปรแกรมเรียงผังงาน ด่าน 2 (xls)
+
