Add Mymedia_Main_IPST Testcase
มีครบทุกเทสเคส ทุก Browser

--- a/TestData/data.yaml
+++ b/TestData/data.yaml
@@ -5,3 +5,4 @@ FAILED_LOGIN_STRAPI: "Invalid credentials"
 REQUIRED_PASSWORD_STRAPI: "This value is required"
 REQUIRED_EMAIL_STRAPI: "This value is required"
 REQUIRED_THAI_STRAPI: "ค่านี้เป็นค่าที่จำเป็น"
+ERROR_CEATEFOLDER_IPST: "กรุณากรอกชื่อโฟลเดอร์"
