--- a/TestData/environment.yaml
+++ b/TestData/environment.yaml
@@ -8,6 +8,8 @@ URL_PDF:  http://202.139.199.68:3000/medias/M1-Act2-Pdf-%E0%B9%81%E0%B8%9C%E0%B8
 URL_EXERCISE: http://202.139.199.68:3000/medias/m4b1_03_part1force_and_laws_of_motion_028_exercise
 URL_OTHER:  http://202.139.199.68:3000/medias/M1-Act3-Xls-%E0%B9%82%E0%B8%9B%E0%B8%A3%E0%B9%81%E0%B8%81%E0%B8%A3%E0%B8%A1%E0%B9%80%E0%B8%A3%E0%B8%B5%E0%B8%A2%E0%B8%87%E0%B8%9C%E0%B8%B1%E0%B8%87%E0%B8%87%E0%B8%B2%E0%B8%99_2
 
+URL_MYMEDIAMAIN: http://202.139.199.68:3000/medias/%E0%B8%97%E0%B8%94%E0%B8%AA%E0%B8%AD%E0%B8%9A_VE 
+
 LOGIN_EMAIL_TEACHER: teacher@gmail.com
 LOGIN_PASSWORD_TEACHER: 123456
 LOGIN_EMAIL_STUDENT: studentest@gmail.com
