Add Media Item Test Cases

--- a/TestData/environment.yaml
+++ b/TestData/environment.yaml
@@ -14,3 +14,43 @@ LOGIN_EMAIL_STRAPI: charinpat.p@gmail.com
 LOGIN_PASSWORD_STRAPI: Charinpat321
 WRONG_EMAIL_STRAPI: wrong_strapi@gmail.com
 WRONG_PASSWORD_STRAPI: WrongStrapi321
+
+# Add Media Item
+SLUG_MEDIA_VDO: M4EC_071_vdo-Test
+TITLE_MEDIA_VDO: (ทดสอบ) วีดิทัศน์บทที่ 6 เรื่องการใช้ประโยชน์จากข้อมูลของแผนที่
+DESCRIPTION_MEDIA_VDO: สื่อการเรียนรู้นี้เป็นสื่อประกอบในหนังสือเรียนรายวิชาเพิ่มเติมวิทยาศาสตร์และเทคโนโลยี
+SEO_DESCRIPTION_MEDIA_VDO: แผนที่ธรณีวิทยา, แผนที่ภูมิประเทศ
+SUBJECT_MEDIA_VDO: EARTH_SCIENCE
+EDUCATION_LEVEL_MEDIA_VDO: M4
+CATEGORY_MEDIA_VDO: VIDEO
+METADATA_MEDIA_VDO: 16.16
+PREVIEW_TYPE_MEDIA_VDO: RAW_IFRAME
+PREVIEW_URL_MEDIA_VDO: https://drive.google.com/uc?id=1csVAZWoVp9orR839vvHVDIdYYXocsGdt
+DOWNLOAD_URL_MEDIA_VDO: https://drive.google.com/u/0/uc?id=1csVAZWoVp9orR839vvHVDIdYYXocsGdt&export=download 
+EMBEDED_CODE_MEDIA_VDO: <iframe width="560" height="315" src="https://www.youtube.com/embed/nutbSXfo_IQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+SLUG_MEDIA_PDF:
+TITLE_MEDIA_PDF:
+DESCRIPTION_MEDIA_PDF:
+SEO_DESCRIPTION_MEDIA_PDF:
+SUBJECT_MEDIA_PDF:
+EDUCATION_LEVEL_MEDIA_PDF:
+CATEGORY_MEDIA_PDF:
+METADATA_MEDIA_PDF:
+PREVIEW_TYPE_MEDIA_PDF:
+PREVIEW_URL_MEDIA_PDF:
+DOWNLOAD_URL_MEDIA_PDF:
+EMBEDED_CODE_MEDIA_PDF:
+
+SLUG_MEDIA_EXERCISE:
+TITLE_MEDIA_EXERCISE:
+DESCRIPTION_MEDIA_EXERCISE:
+SEO_DESCRIPTION_MEDIA_EXERCISE:
+SUBJECT_MEDIA_EXERCISE:
+EDUCATION_LEVEL_MEDIA_EXERCISE:
+CATEGORY_MEDIA_EXERCISE:
+METADATA_MEDIA_EXERCISE:
+PREVIEW_MEDIA_TYPE_EXERCISE:
+PREVIEW_URL_MEDIA_EXERCISE:
+DOWNLOAD_URL_MEDIA_EXERCISE:
+EMBEDED_CODE_MEDIA_EXERCISE:
