update URL_IPST, URL_Strapi

--- a/TestData/environment.yaml
+++ b/TestData/environment.yaml
@@ -1,5 +1,5 @@
-URL_IPST: http://202.139.199.68:3000/ 
-URL_STRAPI: http://202.139.199.68:1337/admin/auth/login
+URL_IPST:  http://202.139.199.72:3000/
+URL_STRAPI: http://202.139.199.72:1337/admin
 
 URL_VDO:  http://202.139.199.68:3000/medias/M1-P1-%E0%B8%A5%E0%B8%B1%E0%B8%81%E0%B8%A9%E0%B8%93%E0%B8%B0%E0%B8%97%E0%B8%B1%E0%B9%88%E0%B8%A7%E0%B9%84%E0%B8%9B%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%A5%E0%B8%B1%E0%B8%81%E0%B8%A9%E0%B8%93%E0%B8%B0%E0%B9%80%E0%B8%89%E0%B8%9E%E0%B8%B2%E0%B8%B0.
 URL_PPT:  http://202.139.199.68:3000/medias/M1-Act2-PPT-%E0%B9%81%E0%B8%99%E0%B8%A7%E0%B8%84%E0%B8%B4%E0%B8%94%E0%B9%80%E0%B8%8A%E0%B8%B4%E0%B8%87%E0%B8%99%E0%B8%B2%E0%B8%A1%E0%B8%98%E0%B8%A3%E0%B8%A3%E0%B8%A1
