Modify MyMedia_IPST TestCases

--- a/TestData/environment.yaml
+++ b/TestData/environment.yaml
@@ -10,6 +10,8 @@ URL_OTHER:  http://202.139.199.72:3000/medias/M1-Act3-Xls-%E0%B9%82%E0%B8%9B%E0%
 
 URL_MYMEDIAMAIN: http://202.139.199.72:3000/medias/%E0%B8%97%E0%B8%94%E0%B8%AA%E0%B8%AD%E0%B8%9A_VE 
 
+URL_MYMEDIA:  http://202.139.199.72:3000/my-medias
+
 LOGIN_EMAIL_TEACHER: teacher@gmail.com
 LOGIN_PASSWORD_TEACHER: 123456
 LOGIN_EMAIL_STUDENT: studentest@gmail.com
